Changed font, Added underlines to headings.

--- a/index.html
+++ b/index.html
@@ -10,23 +10,19 @@
 
 <section>
 <body>
-    <header>
         <h1>Francisco Quinones</h1>
-        <p>My career goal is to work as a financial advisor to celebrities. I have been able to gain connections to social media influencers through my work in photography,<br> and I hope to branch off to athletes. </p>
-        <br>
-        <img src="/Users/frankquinones/Desktop/ISM 3232/portfolio-site-1/Photos/IMG_8467.jpeg"
-    width="400" height="600"> </img>
-    </header>
+        <p>My career goal is to work as a financial advisor to high earnings individuals. Through my work in photography, <br> I have met numerous social media influencers, models, and musicians. <br> I hope to add professional athletes to my portfolio soon so I can start developing a business connection with them. </p>
+        <img src="IMG_8467.jpeg" alt="A photo of my dog Lego" width="400" height="600"> </img>
 </section>
 
 <br>
 
-<main>
+<section>
    <h3>My Contact Information</h3>
    <a href="mailto:fquinonescedeno-usf.edu">fquinonescedeno@usf.edu</a> <br>
    <a href="https://github.com/franciscoquinones-usf" target="_blank">github.com/franciscoquinones-usf</a> <br>
    <a href="https://www.linkedin.com/in/francisco-quinones-cedeno/" target="_blank">linkedin.com/in/francisco-quinones-cedeno</a> <br>
-</main>
+</section>
 
 </body>
 </html>
